# SQLHunt

./: .dockerignore  .env.local.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  recreate_db.sql  requirements.txt  terminate_connections.sql
app/: globals.css  layout.tsx  (+1 more)
backend/: .env.example  .env.local.example  Dockerfile  README.md  manage.py  pyproject.toml  recreate_db.sql  requirements.txt  terminate_connections.sql
backend/core/: celery_app.py  urls.py
backend/core/account/: authentication.py  forms.py  models.py  views.py
backend/core/account/migrations/: 0001_initial.py
backend/core/account/templates/: base.html
backend/core/authentication/: apps.py  serializers.py  urls.py  views.py
backend/core/config/: routers.py  settings.py  test.py  urls.py  wsgi.py
backend/core/investigations/: admin.py  apps.py  models.py
backend/core/investigations/migrations/: 0001_initial.py
backend/core/services/: answer_checker.py  schema_creator.py  sql_executor.py
backend/core/services/case_loader/: case_loader.py
backend/core/services/generator/: data_generator.py
backend/core/users/: admin.py  apps.py  decorators.py  models.py  signals.py  tasks.py  tests.py  urls.py  views.py
backend/sqlhunt/: requirements.txt
backend/sqlhunt/account/: admin.py  apps.py  models.py  signals.py  urls.py
backend/sqlhunt/config/: routers.py  settings.py  urls.py
backend/sqlhunt/investigations/: models.py  tests.py
backend/sqlhunt/users/: models.py  signals.py  tests.py
(+165 files in other folders)
